--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    
+
 }
 
 #filter{
@@ -29,18 +29,18 @@ body{
 }
 nav{
     width: 100%;
-    margin: 0px; 
+    margin: 0px;
     box-sizing: border-box;
-    
+
 }
 nav ul{
     list-style: none;
-    width: 100%; 
+    width: 100%;
     box-sizing: border-box;
     display: flex;
-    align-items: stretch; 
+    align-items: stretch;
     justify-content: space-between;
-    
+
 }
 nav ul li{
     width: calc(100% / 9);
@@ -48,7 +48,7 @@ nav ul li{
     align-items: stretch;
     justify-content: space-between;
     display: inline-block;
-    
+
     text-align:center;
 }
 nav ul li a{
@@ -60,8 +60,8 @@ nav ul li a{
     text-align:center;
     text-decoration: none;
     display: inline-block;
-    
-    
+
+
 }
 nav ul li img{
     display: inline-block;
@@ -100,7 +100,7 @@ h3{
     font-size: 14px;
     line-height: 1.4em;
     width: 20%;
-    
+
 }
 #subfont{
     /*the tiny font under the brand name(the drop name)*/
@@ -120,11 +120,11 @@ h3{
 /*add an id to the large "some really cool..." if you need to in HTML to change size*/
 #alphabetic-sort ul{
     list-style: none;
-    width: 100%; 
+    width: 100%;
     margin-left: 0px;
     margin-right: 0px;
-    display: inline-block; 
-    
+    display: inline-block;
+
 }
 #alphabetic-sort li{
     width: calc(90% / 30);
@@ -142,7 +142,7 @@ h3{
     font: normal;
     color: black;
     text-align:center;
-    
+
 }
 
 table{
@@ -163,10 +163,10 @@ hr{
 }
 
 footer{
-    width: 100%; 
+    width: 100%;
     margin-left: 0px;
     margin-right: 0px;
-    display: inline-block; 
+    display: inline-block;
     text-align:center;
 }
 
@@ -188,4 +188,29 @@ footer{
     text-align:center;
     float: right;
     padding: 20px
+}
+.sidenav{
+  height: 200%;
+  width: 300;
+  position: relative;
+  z-index: 0; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #dae3e3; /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top:20px;
+
+}
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  fontsize: 30 px;
+  color: #090a0a ;
+  text-align: left;
+  display: block;
+  font-family: 'Playfair Display';
+  font-size: 35px;
+  line-height: 1.3em;
+}
+.sidenav a:hover {
+  color: #5d735f;
 }
