--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,10 @@ body{
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 .filter{
     list-style-type: none;
     margin-left: 20px;
@@ -43,6 +47,13 @@ body{
     margin: 1.5em;
 }
 
+.in-stock-text p {
+    text-decoration: none;
+    font-family: 'Roboto';
+    color: black;
+    width:5%;
+}
+
 .in-stock-img {
     height: 80%;
     background-color: black;
@@ -72,11 +83,10 @@ body{
 }
 
 #left-side li {
-    margin-left: 25px;
+    margin: 1em 0 25px 1em;
 }
 
-
-#right-side {
+#in-stock-main {
     width: 75%;
     display: flex;
     flex-wrap: wrap;
@@ -86,67 +96,67 @@ body{
 
 
 /*Start of Calendar page*/
-#calendar-header {
-    height: 3em;
-}
-
-#calendar-header-day {
-    border: none;
-    text-align: center;
-    position: relative;
-}
-
-#calendar-header-day h1{
-    padding-top: 0;
-    font-size: 48px;
-}
-
-.calendar-row {
-    height: 10em;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 3em 0;
+.calendar-week {
+    display:grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-auto-flow: row;
+    gap: 5px 0; 
+    margin: 0 20px 3em 20px;
 }
 
 .calendar-day {
-    border: 1px solid grey;
-    height: 100%;
-    width: 11em;
+    width: 7em;
+    height: 7em;
+    border: 1px solid black;
+    margin: auto;
+}
+
+#calendar-header {
+    margin-bottom: 0;
+}
+
+#calendar-header-day{ 
+    font-size: 24px;
+    height: 1em;
+    text-align: center;
+    border: none;
+}
+#calendar-header-day h2{ 
+    font-size: 32px;
+    margin-top: 0;
+}
+
+#calendar-break {
+    margin: 1.2em 20px 1.8em 20px;
+}
+
+.calendar-day h1 {
+    margin-top: 0;
+    padding-left: 0.25em;
+    margin-bottom: 0;
 }
 
 #has-event {
-    background-color: #FCFCFC;
+    background-color: rgb(170, 170, 170);
 }
 
-.calendar-event {
-    width: 5.5em;
-}
-.calendar-event p{
-    width: 100%;
+#has-event h2 {
     text-align: center;
-    font-size: 24px;
+    font-size: 14px;
 }
-
-#calendar-event-button {
+#event-button {
     width: 100%;
-    height: 1.2em;
-    font-size: 12px;
-    background-color: #FCFCFC;
-    padding: auto;
-    vertical-align: top;
+    display: flex;
+}
+#event-button button {
+    padding: 5px;
+    font-size: 10px;
+    margin: 0 auto 0 auto;
+    background-color: rgb(170, 170, 170);
+    color: black;
+    border: 2px solid black;
 }
 
-.calendar-day-date {
-    font-size: 32px;
-    display: inline-block;
-    height: 25%;
-}
-
-.calendar-day-date p {
-    margin-top: 0;
-    margin-left: 0.15em;
-}
 
 /*End of Calendar page*/
 
