Created JS for adding an item to the cart. Clicking the add to cart button saves the item in local storage and updates nav bar. Once the cart page is done accessing the items on that page should be simple

--- a/src/style.css
+++ b/src/style.css
@@ -44,14 +44,14 @@ a {
 .in-stock-item {
     width: 16em;
     height: 29em;
-    margin: 1.5em;
+    margin: 1.5em 1.5em 5em 1.5em;
 }
 
 .in-stock-text p {
     text-decoration: none;
     font-family: 'Roboto';
     color: black;
-    width:5%;
+    width:100%;
 }
 
 .in-stock-img {
