--- a/src/style.css
+++ b/src/style.css
@@ -274,13 +274,16 @@ h3{
     width: 20%;
 
 }
+/*
 #subfont{
-    /*the tiny font under the brand name(the drop name)*/
+    the tiny font under the brand name(the drop name)
     font-family: 'Roboto';
     font-size: 12px;
     color: black;
     line-height: 1.3em;
 }
+*/
+    
 
 #dates{
 /*need to have a diff font size for dates in container*/
@@ -637,4 +640,160 @@ a{
     font-size: 22px;
 }
 
+/*Claudia's additions for homepage*/
+.sidenav{
+    height: 100%;
+    width: 20%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #cfcfcf;
+    position: relative;
+    z-index: 0; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #ebebeb; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top:3px;
+
+  }
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  font-size: 30px;
+  color: #090a0a ;
+  text-align: left;
+  display: block;
+  font-family: 'Playfair Display';
+  font-size: 35px;
+  line-height: 1.3em;
+}
+.sidenav a:hover {
+  color: #717d6d;
+}
+
+.mainColumn{
+    height: 100%;
+    width: 75%;
+    display: flex;
+    border-color: white ;
+    border-width: 3px;
+    margin-left: 40px;
+}
+
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    margin: 0px;
+}
+
+.grid-container{
+    display: grid;
+    grid-row-gap: 20px;
+    /* grid-column-gap: 10px; */
+    padding: 1px;
+    }
+/*this may affect all links*/
+a{
+    text-decoration: none;
+}
+img{
+    padding-left: 10px;
+    padding-bottom: 10x;
+    margin: 15px;
+}
+
+.inStockContainers{
+    height: 230px;
+    width: 200px;
+    border: #DFDFDF;
+    border-style: solid;
+    margin: 35px;
+    position: relative;
+    text-align: center;
+
+
+
+}
+
+#typePrice{
+    color: grey;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+
+}
+
+#instock{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 27px;
+    font-weight: bold;
+    color: black;
+    line-height: 1.6em;
+    text-align: left;
+
+  }
+  #inStockSmall{
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      font-weight: bold;
+      color: black;
+      text-align: left;
+
+}
+#brandName{
+    /*brand name in side nav*/
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: black;
+    padding-left: 50 px;
+
+
+  }
+  #subfont{
+      /*the tiny font under the brand name(the drop name)*/
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 12px;
+      font-weight: bold;
+      color: black;
+      padding-left: 2px;
+  }
+  #headline{
+      /*the headline on the front page8*/
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 300;
+      font-size: 45px;
+      color: black;
+
+  }
+  #subheadline{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: grey;
+    /*padding-left: 50 px;*/
+
+  }
+  #credit{
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 10px;
+      text-align: right;
+
+  }
+  #secondh4{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
+    color: black;
+    line-height: 1.6em;
+    text-align: center;
+    padding-top: 1px;
+    font-weight: bold;
+  }
+  .pictureContainers{
+    border: #DFDFDF;
+    margin: 20px;
+    position: relative;
+    text-align: center;
+
+
+
+}
+ 
 
