--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,10 @@ a {
     margin-top: 0;
 }
 
+.in-stock-img img {
+    height: 100%;
+}
+
 .in-stock-text {
     height: 20%;
     vertical-align: bottom;
