--- a/src/style.css
+++ b/src/style.css
@@ -145,14 +145,19 @@ a {
 /*----------------------------------------------------------------------------------------*/
 
 
-
+@media screen and (max-width: 930px) {
+    .in-stock-item {
+        background: red;
+    }
+}
 
 
 /* For the In Stock Page*/
 .in-stock-item {
     width: 16em;
     height: 29em;
-    margin: 1.5em 1.5em 5em 1.5em;
+    margin: auto;
+    padding: 1em;
 }
 
 .in-stock-text p {
@@ -189,6 +194,7 @@ a {
 #saved-items-container {
     margin-top: auto;
     display: flex;
+    justify-content: space-evenly;
     
 }
 
@@ -247,16 +253,22 @@ a {
     margin: 0.5em 0 0 1.75em;
 }
 
-.saved-item p{
-    margin: 0 0 0 2em;
-    padding: 0;
-    font-size: 14px;
+.saved-item-text p{
+    text-decoration: none;
+    font-family: 'Roboto';
+    color: black;
+    width:100%;
+    margin-left: 2em;
 }
 
 #saved-last-text {
     margin-bottom: 0.5em;
 }
 
+#remove-button {
+    margin: 5em 0 0 0.5em;
+    color: black;
+}
 
 
 /*---------------------------------------------------------------*/
