--- a/src/style.css
+++ b/src/style.css
@@ -253,7 +253,6 @@ a {
 
     #left-side-mobile {
         display: flex;
-        background: lightblue;
         justify-content: space-evenly;
         flex-wrap: wrap;
     }
@@ -283,6 +282,20 @@ a {
     .in-stock-mobile-lower {
         display: none;
     }
+
+    .in-stock-mobile-lower div {
+        margin: 0 1em;
+    }
+
+    #mobile-sort h2 {
+        margin: 1em 4em;
+    }
+
+    #mobile-filter div {
+        margin: 1em 2em;
+    }
+
+
 }
 /*End of In Stock And Saved Items*/
 
@@ -309,7 +322,7 @@ a {
 }
 
 #calendar-header-day{ 
-    font-size: 24px;
+    margin-bottom: 1em;
     height: 1em;
     text-align: center;
     border: none;
@@ -732,6 +745,7 @@ input {
 #Content{
     width: 100%;
 }
+
 hr{
     width:96%;
 }
@@ -810,6 +824,7 @@ hr{
 a{
     text-decoration:  none;
 }
+
 
 #SameLine{
     width: 35%;
