--- a/src/style.css
+++ b/src/style.css
@@ -435,6 +435,17 @@ a {
     text-decoration: none;
     display: inline-block;
 }
+.full-nav ul li button{
+    font-family: 'Roboto';
+    font-size: 1.5vw;
+    font: bolder;
+    color: black;
+    padding-top: 20px;
+    text-align:center;
+    text-decoration: none;
+    display: inline-block;
+    outline: none;
+}
 
 
 nav ul li img{
@@ -1062,27 +1073,40 @@ img{
 }
 /* ------------------------------- MOLLY LOGIN DROP DOWN ------------------------ */
 form {
-    border: 3px solid #f1f1f1;
+    border: 1px solid #f1f1f1;
 }
 /* large input fields */
+.logincontainer h1 {
+    text-align: center;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+    font-family: 'Roboto';
+    font-weight: bolder;
+}
 input[type=Email], input[type=password] {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    padding: 12px 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
 
 /* modal (background) */
 .modal {
-    display: none;
+    display: none; /*didn't change this*/
     position: fixed; 
+    margin-left: auto;
+    margin-right: auto;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    padding-right: 0px;
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -1093,24 +1117,27 @@ input[type=Email], input[type=password] {
     background-color: #fefefe;
     margin: 5% auto; 
     border: 1px solid #888; 
-    width: 80%;
-    
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 65%;
 }
 
 /* style for buttons */
-button {
-    background-color: white;
+.loginbutton {
+    background-color: black;
     font-family: 'Roboto';
     font-size: 1.5vw;
     font: bolder;
-    color:black;
+    color:white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     width:100%;
     cursor: pointer;
 }
-button:hover {
+.loginbutton:hover {
     opacity: 0.8;
 }
 /* style for profile nav button */
@@ -1119,17 +1146,25 @@ button:hover {
     border: none;
     width: 100%;
 }
+.modalbtn{
+    background-color: white;
+    border: none;
+    width: 100%;
+    color: black;
+    }
 /* style for cancel button */
-.cancelbtn button{
-    width: auto;
+#cancelbtn button{
+    width: 80%;
     padding: 10px 18px;
+    font-family: 'Roboto';
 }
 /* The Close Button */
 .close {
     /* Position it in the top right corner outside of the modal */
-    position: absolute;
-    right: 25px;
-    top: 0;
+    position: block;
+    /* right: 25px; */
+    /* top: 0; */
+    margin-bottom: 0px;
     color: #000;
     font-size: 35px;
     font-weight: bold;
@@ -1138,17 +1173,21 @@ button:hover {
   /* Close button on hover */
   .close:hover,
   .close:focus {
-    color: red;
+    color: gray;
     cursor: pointer;
   }
 
-.container {
-    padding: 16px;
+.logincontainer {
+    padding: 10px;
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 span.psw {
     float: right;
-    padding-top: 16px;
+    vertical-align: bottom;
 }
 
 
