--- a/src/style.css
+++ b/src/style.css
@@ -1114,6 +1114,7 @@ input[type=Email], input[type=password] {
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
+    font-family: 'Roboto';
 }
 /* content box */
 .modal-content {
@@ -1127,6 +1128,14 @@ input[type=Email], input[type=password] {
     height: 65%;
 }
 
+#loginbtn {
+    padding: 10px 18px;
+    font-family: 'Roboto';
+    height: 25px;
+    text-align: center;
+    margin-top: 15px;
+    width: 91%;
+}
 /* style for buttons */
 .loginbutton {
     background-color: black;
