--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body{
 
 a {
     text-decoration: none;
+    color:black;
 }
 
 .filter{
@@ -454,6 +455,7 @@ nav ul li img{
     width:100%;
     display: flex;
     justify-content: center;
+    font-family: 'Roboto';
 
 }
 
@@ -1047,6 +1049,7 @@ img{
     margin-top:0px;
     padding-left:8px;
     /*padding-top: 0px;*/
+    
 }
 
 .SignInContent button{
@@ -1062,27 +1065,41 @@ img{
 }
 /* ------------------------------- MOLLY LOGIN DROP DOWN ------------------------ */
 form {
-    border: 3px solid #f1f1f1;
+    border: 1px solid #f1f1f1;
 }
 /* large input fields */
-input[type=Email], input[type=password] {
+.container h1{
+    text-align: center;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    font-family: 'Roboto';
+    font-weight: bolder;
+}
+.container input[type=Email], .container input[type=password] {
+    width: 100%;
+    padding: 12px 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+    
 }
 
 /* modal (background) */
 .modal {
-    display: none;
-    position: fixed; 
+    display: block;
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    padding-right: 0px;
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -1093,17 +1110,20 @@ input[type=Email], input[type=password] {
     background-color: #fefefe;
     margin: 5% auto; 
     border: 1px solid #888; 
-    width: 80%;
-    
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 70%;
 }
 
 /* style for buttons */
-button {
-    background-color: white;
+.container button {
+    background-color: black;
     font-family: 'Roboto';
     font-size: 1.5vw;
     font: bolder;
-    color:black;
+    color:white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -1119,10 +1139,17 @@ button:hover {
     border: none;
     width: 100%;
 }
+.modalbtn{
+    background-color: white;
+    border: none;
+    width: 100%;
+    color: black;
+}
 /* style for cancel button */
 .cancelbtn button{
-    width: auto;
+    width: 80%;
     padding: 10px 18px;
+    font-family: 'Roboto';
 }
 /* The Close Button */
 .close {
@@ -1143,12 +1170,16 @@ button:hover {
   }
 
 .container {
-    padding: 16px;
+    padding: 10px;
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 span.psw {
     float: right;
-    padding-top: 16px;
+    vertical-align: bottom;
 }
 
 
@@ -1221,3 +1252,46 @@ span.psw {
     border-left: 3px solid black;
     height: 180px;
   }
+
+/*Profile Page Specifics-Jaimie*/
+#ProfileSpecs{
+    font-family: 'Playfair Display';
+    font-size: 27px;
+    font-weight: normal;
+    margin-left: 15%;
+}
+#ProfileList{
+    width:20%;
+    float: left;
+    margin-right: 3%;
+    margin-left: 15%;
+    font-family: 'Roboto';
+    font-weight: 300;
+}
+
+#ProfileLogIn button{
+    width: 40%;
+    font-size: 18px;
+    color: white;
+    background-color: black;
+    padding-top: .2%;
+    padding-bottom: .2%;
+    outline-color: black;
+    margin-top: 3%;
+    margin-bottom: 4%;
+    margin-left: 38%;
+}
+#ProfileLogIn p{
+    margin-bottom: 3px; 
+    font-family: 'Roboto';
+    font-weight: 300;
+    margin-top: 2.5%;
+    font-size: 15px;
+}
+#ProfileLogIn input{
+    margin-top: 0px;
+}
+#ProfilePageHR{
+    margin-left:15%;
+    width:65%;
+}
