--- a/src/style.css
+++ b/src/style.css
@@ -494,6 +494,7 @@ h3{
     width: 20%;
 
 }
+
 /*
 #subfont{
     the tiny font under the brand name(the drop name)
@@ -898,17 +899,21 @@ a{
 
 .mainColumn{
     height: 100%;
-    width: 75%;
+    width: 100%;
     display: flex;
     border-color: white ;
     border-width: 3px;
-    margin-left: 40px;
+    margin-left: 40px; 
+    margin-right: 40px; 
+    /*justify-content: center; */
 }
 
 .flex-container{
     display: flex;
     flex-direction: row;
-    margin: 0px;
+    margin: 1px;
+    justify-content: space-around;
+    
 }
 
 .grid-container{
@@ -927,6 +932,7 @@ img{
     margin: 15px;
 }
 
+
 .inStockContainers{
     height: 230px;
     width: 200px;
@@ -943,7 +949,9 @@ img{
     font-size: 14px;
 
 }
-
+#opacity{
+    opacity: 0.5;
+}
 #instock{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 27px;
@@ -1008,6 +1016,7 @@ img{
     text-align: center;
     padding-top: 1px;
     font-weight: bold;
+    opacity: 0.5;
   }
   .pictureContainers{
     border: #DFDFDF;
@@ -1019,6 +1028,7 @@ img{
     margin: 2px;
     position: relative;
     text-align:center;
+    opacity: 0.5;
 
 }
 /* molly's css for Cherry LA*/
