--- a/src/style.css
+++ b/src/style.css
@@ -580,11 +580,13 @@ footer{
     padding-top: auto;
     height: 100%;
     margin-top: auto;
+    font-family: Roboto;
 }
 
 #footer-middle{
     width: 60%;
     float: none;
+    font-family: Roboto;
 }
 #footer-right{
     width: 20%;
@@ -597,7 +599,8 @@ footer{
     display: block;
     text-align:center;
     float: right;
-    padding: 20px
+    padding: 20px;
+    font-family: Roboto;
 }
 
 
@@ -606,7 +609,7 @@ footer{
     font-size: 16px;
     font: bolder;
     color: black;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     text-align:center;
     text-decoration: none;
     display: inline-block;
@@ -871,7 +874,7 @@ a{
 
 /*Claudia's additions for homepage*/
 .sidenav{
-    height: 100%;
+    height: 670px;
     width: 20%;
     border-style: solid;
     border-width: 3px;
@@ -905,22 +908,30 @@ a{
     display: flex;
     border-color: white ;
     border-width: 3px;
-    margin-left: 40px; 
-    margin-right: 40px; 
-    /*justify-content: center; */
+    /* margin-left: 50px; 
+    margin-right: 40px;  */
+    justify-content: center; 
 }
 
 .flex-container{
     display: flex;
     flex-direction: row;
     margin: 1px;
-    justify-content: space-around;
+    justify-content: center;
     
+    
+}
+.shopNow{
+    background-color:#ebebeb;
+    /* margin-top: 5px; */
+    margin-left: 40px;
+    margin-right: 40px;
+    align-content: center;
 }
 
 .grid-container{
     display: grid;
-    grid-row-gap: 20px;
+    grid-row-gap: 10px;
     /* grid-column-gap: 10px; */
     padding: 1px;
     }
@@ -955,26 +966,26 @@ img{
     opacity: 0.5;
 }
 #instock{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: bold;
+    font-family: Roboto;
+    font-size: 45px;
+    font-weight: 300;
     color: black;
     line-height: 1.6em;
     text-align: left;
+    margin-left: 20px;
 
   }
   #inStockSmall{
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 15px;
-      font-weight: bold;
+      font-family: Roboto;
+      font-size: 20px;
+      font-weight: 350;
       color: black;
-      text-align: left;
+      text-align: center;
 
 }
 #brandName{
     /*brand name in side nav*/
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-family: Roboto;
     font-size: 18px;
     color: black;
     padding-left: 50 px;
@@ -983,54 +994,135 @@ img{
   }
   #subfont{
       /*the tiny font under the brand name(the drop name)*/
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: Roboto;
       font-size: 12px;
-      font-weight: bold;
+      font-weight: 300;
       color: black;
       padding-left: 2px;
   }
   #headline{
       /*the headline on the front page8*/
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: 300;
-      font-size: 45px;
+      font-family: Roboto;
+      
+      font-size: 46px;
       color: black;
 
   }
   #subheadline{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    color: grey;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 300;
+    color: rgb(31, 28, 28);
     /*padding-left: 50 px;*/
 
   }
   #credit{
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 10px;
-      text-align: right;
+      font-family: Roboto;
+      font-size: 12px;
+      text-align: left;
 
   }
-  #secondh4{
-    font-family: Arial, Helvetica, sans-serif;
+  #releases{
+    font-family: Roboto;
     font-size: 23px;
     color: black;
     line-height: 1.6em;
     text-align: center;
     padding-top: 1px;
-    font-weight: bold;
-    opacity: 0.5;
+    
+  }
+  #releasesLeft{
+    font-family: Roboto;
+    font-size: 23px;
+    color: black;
+    line-height: 1.6em;
+    text-align: left;
+    padding-top: 1px;
+    
+  }
+  .FAQaccordian {
+    background-color: rgb(180, 180, 180);
+    color: black;
+    cursor: pointer;
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+    font-size: 20px;
+    transition: 0.6s;
+    font-family: Roboto;
+    border: none;
+    outline: none;
+    
+  }
+  .active, .FAQaccordian:hover{
+    background-color: grey;
+
+  }
+  .show{
+      padding: 0 15px;
+      background-color: white;
+      overflow: hidden;
+      display: none;
+      font-family: Roboto;
+      font-weight: 300;
+      font-size: 17px;
+  }
+  #aboutPageHeader{
+    font-family: Roboto;
+    text-align: left;
+    font-weight: lighter;
+    font-size: 60px;
+    text-align: left;
+    margin-left: 30px;
+}
+#normalText{
+    font-family: Roboto;
+    text-align: left;
+    font-weight: lighter;
+    font-size: 35px;
+    text-align: left;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-justify: newspaper;
+
+}
+.aboutContainer{
+    background-color: lightgrey;
+    margin: 500px;
+
+}
+  .headlinePic{
+    margin-left: 40px;
   }
   .pictureContainers{
-    border: #DFDFDF;
-    margin: 20px;
+    /* border: #DFDFDF; */
+    /* margin: 10px; */
     position: relative;
     text-align: center;
+    /* display: grid; */
+    /* justify-content: center; */
+}
+.previous{
+    
+    color: rgb(117, 117, 117);
+    font-size: 75px;
+    margin-top: 97px;
+}
+.next{
+    
+    color: rgb(117, 117, 117);
+    font-size: 75px;
+    margin-top: 97px;
+}
+.round{
+    border-radius: 50%;    
 }
 .sidebarcontainers{
     margin: 2px;
     position: relative;
     text-align:center;
-    opacity: 0.5;
+    
+    /*opacity: 0.5; */
 
 }
 /* molly's css for Cherry LA*/
@@ -1092,6 +1184,7 @@ img{
     margin-bottom: 4%;
 }
 /* ------------------------------- MOLLY LOGIN DROP DOWN ------------------------ */
+
 form {
     border: 1px solid #f1f1f1;
 }
