--- a/src/style.css
+++ b/src/style.css
@@ -357,6 +357,7 @@ a {
 #event-button {
     width: 100%;
     display: flex;
+    justify-content: center;
 }
 #event-button button {
     padding: 5px;
@@ -1137,11 +1138,17 @@ img{
 #text li {
     list-style-type:none;
 }
+.text {
+    font-family:Roboto;
+    font-weight:300;
+    font-size: 18px;
+}
 #title2 h1{
     width:100%;
     display: flex;
     justify-content: left;
     margin: 30px;
+    font-family: Roboto;
 }
 #drop1{
     width:100%;
@@ -1441,3 +1448,48 @@ span.psw {
     padding-left:0px;
     text-align: left;
 }
+
+/* Drops drop down */
+.dropbtn {
+    background-color:white;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: white;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: black;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: black}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
