fixed issue with faq dropdown

--- a/src/style.css
+++ b/src/style.css
@@ -1059,7 +1059,7 @@ img{
     background-color: grey;
 
   }
-  .show{
+  .showFAQ{
       padding: 0 15px;
       background-color: white;
       overflow: hidden;
