--- a/src/style.css
+++ b/src/style.css
@@ -1087,6 +1087,45 @@ img{
     text-justify: newspaper;
 
 }
+.pmodal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .pmodal-content {
+    height: 400px;
+    background-color: #fefefe;
+    /* margin: auto; */
+    padding: 25px; 
+    border: 1px solid #888;
+    width: 40%;
+    text-align: center;
+  }
+  
+  /* The Close Button */
+  .pclose {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .pclose:hover,
+  .pclose:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
 .aboutContainer{
     background-color: lightgrey;
     margin: 500px;
