--- a/src/style.css
+++ b/src/style.css
@@ -911,14 +911,14 @@ a{
     border-width: 3px;
     /* margin-left: 50px; 
     margin-right: 40px;  */
-    justify-content: center; 
+    /*justify-content: center; */
 }
 
 .flex-container{
     display: flex;
     flex-direction: row;
     margin: 1px;
-    justify-content: center;
+    /*justify-content: center; */
     
     
 }
@@ -1092,13 +1092,14 @@ img{
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
-    left: 0;
+    padding-left: 550px;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    
   }
   
   /* Modal Content */
