--- a/src/style.css
+++ b/src/style.css
@@ -918,7 +918,7 @@ a{
     display: flex;
     flex-direction: row;
     margin: 1px;
-    /*justify-content: center; */
+    /*justify-content: center; XX */
     
     
 }
